# zmk-driver-azoteq-iqs915x

./: .gitignore  AGENTS.md  README.md
drivers/input/: CMakeLists.txt  IQS9150_init.h  Kconfig  iqs915x.c  iqs915x.h  iqs915x_regs.h
dts/bindings/input/: azoteq,iqs915x-common.yaml  azoteq,iqs915x-i2c.yaml
include/: iqs915x.h
include/dt-bindings/input/: iqs915x_gestures.h
scripts/: convert_init_header.py  generate_coord_lut.py
zephyr/: module.yml
